--- a/merchants.html
+++ b/merchants.html
@@ -125,63 +125,61 @@
 
     
 <footer class="bg-black">
-   <div class="container mx-auto">
-     <div class="w-full flex flex-wrap md:flex-row pt-16">
-       <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
-         <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
-            <img style="width: 150px;" src="assets/img/logo-white.png" /> 
-         </a>
-        <div style="width: 80%;" class="mx-auto mt-4">
-         <i class="fa fa-facebook text-white fa-2x ml-3 mr-2"></i>
-         <i class="fa fa-instagram text-white fa-2x ml-3 mr-2"></i>
-        </div>
+  <div class="container mx-auto mt-0">
+    <div class="w-full flex flex-wrap md:flex-row pt-16">
+      <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
+        <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
+           <img style="width: 120px;" src="assets/img/logo-white.png" /> 
+        </a>
+       <div style="width: 80%;" class="mt-4">
+        <i class="fa fa-twitter text-white  ml-3 mr-2"></i>
+        <i class="fa fa-facebook text-white  ml-3 mr-2"></i>
+        <i class="fa fa-instagram text-white  ml-3 mr-2"></i>
        </div>
-
-       <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
-         <p class="uppercase font-extrabold text-gray-100 md:mb-6">Links</p>
-         <ul class="list-reset mb-6">
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">FAQ</a>
-           </li>
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Help</a>
-           </li>
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="reports.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Support</a>
-           </li>
-         </ul>
-       </div>
-       <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
-         <p class="uppercase font-extrabold text-gray-100 md:mb-6">Legal</p>
-         <ul class="list-reset mb-6">
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="terms.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Terms</a>
-           </li>
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Privacy</a>
-           </li>
-         </ul>
-       </div>
-       <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
-         <p class="uppercase font-extrabold text-gray-100 md:mb-6">Contact us</p>
-         <ul class="list-reset mb-6">
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">lagos@winwinnaija.com</a>
-           </li>
-           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-             <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">+234 708 387 1921</a>
-           </li>
-         </ul>
-       </div>
-     </div>
-     <div class="w-full flex flex-col md:flex-row py-4">
-      <div class="flex-1 text-center">
-         <a href="#" class="font-light no-underline text-xs text-gray-400 hover:text-orange-500"> © 2020 Discomfort</a>
       </div>
-     </div>
 
-   </div>
- </footer> 
+      <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
+        <p class="uppercase font-extrabold text-gray-100 md:mb-6">Links</p>
+        <ul class="list-reset mb-6">
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">FAQ</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="reports.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Support</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
+        <p class="uppercase font-extrabold text-gray-100 md:mb-6">Legal</p>
+        <ul class="list-reset mb-6">
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="terms.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Terms</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Privacy</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 px-4">
+        <p class="uppercase font-extrabold text-gray-100 md:mb-6">Contact us</p>
+        <ul class="list-reset mb-6">
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">lagos@winwinnaija.com</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">+234 708 387 1921</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="w-full flex flex-col md:flex-row py-4">
+     <div class="flex-1 text-center">
+        <a href="#" class="font-light no-underline text-xs text-gray-400 hover:text-orange-500"> © 2020 Discomfort</a>
+     </div>
+    </div>
+
+  </div>
+</footer> 
  
  
 
