--- a/terms.html
+++ b/terms.html
@@ -14,15 +14,15 @@
     <link rel='stylesheet' type='text/css' href="assets/css/main.css">
 </head>
    <body class="tracking-wider tracking-normal">
-    <header class="w-full z-10 top-0 bg-primary pt-1 sticky">
+    <header class="w-full z-10 top-0 bg-primary pt-1 sticky bd-btm-secondary">
       <nav class="navbar container home-menu navbar-expand-lg"> 
          <a href="/home.html" class="navbar-brand r-mauto" href="#" data-abc="true">
             <img style="width: 120px;" class="img-logo-mobile" src="assets/img/logo-white.png" /> 
          </a> 
-         <button class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarhomemenu" aria-controls="navbarhomemenu" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <title>Menu</title>
-          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
-       </svg></button>  
+         <button style="position: absolute;right: 20px; top: 25px;" class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarhomemenu" aria-controls="navbarhomemenu" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <title>Menu</title>
+            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
+         </svg></button>  
          <div class="collapse navbar-collapse" id="navbarhomemenu">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item text-gray-100">
@@ -33,9 +33,6 @@
               </li>
               <li class="nav-item text-gray-100">
                <a class="nav-link" href="home.html#banks-section">BANKS</a>
-             </li>
-             <li class="nav-item text-gray-100 active">
-               <a class="nav-link" href="reports.html">REPORT</a>
              </li>
             </ul>
             <span class="navbar-text btn-menu">
@@ -49,6 +46,8 @@
                   </ul>   
              </span>
           </div>
+
+    
       </nav>
   
       </header>
