--- a/home.html
+++ b/home.html
@@ -36,11 +36,11 @@
                 </li>
                </ul>
                <span class="navbar-text btn-menu">
-                  <ul class="navbar-nav mr-auto">
-                     <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
+                  <ul class="navbar-nav mr-auto flex flex-row">
+                     <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
                         SIGN UP
                       </button></li>
-                      <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-gray-100 hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
+                      <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-md-block bg-gray-100 hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
                         LOG IN
                       </button></li>
                      </ul>   
@@ -60,7 +60,7 @@
          <h1 style="letter-spacing: -4px;" class="text-secondary-h text-9xl font-norwester">WIN OR LOSE</h1>
          <p class="text-2xl-resp font-poppins text-white font-w-600">CONTROL YOUR ODDS,<br/>
             THIS IS HOW BETTING SHOULD BE DONE</p>
-            <button class="mt-4 font-poppins font-w-700 d-none d-md-block bg-secondary-h hover:bg-primary hover:text-secondary focus:outline-none text-primary font-bold text-2xl px-4 py-2 border border-primary rounded">
+            <button class="mt-4 font-poppins font-w-700 d-md-block bg-secondary-h hover:bg-primary hover:text-secondary focus:outline-none text-primary font-bold text-2xl px-4 py-2 border border-primary rounded">
                JOIN WIN WIN
              </button>
          </div>
