--- a/terms.html
+++ b/terms.html
@@ -56,7 +56,7 @@
   <section class="bg-homegames">
 <div class="row justify-center m-0">
    <div class="col-lg-8 py-5">
-      <h2 class="text-secondary text-2xl font-norwester">TERMS & CONDITIONS</h2>
+      <h2 class="text-secondary-h text-2xl font-norwester">TERMS & CONDITIONS</h2>
    </div>
    <div class="col-lg-8">
 
