--- a/reports.html
+++ b/reports.html
@@ -37,10 +37,10 @@
             </ul>
             <span class="navbar-text btn-menu">
                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
+                  <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
                      SIGN UP
                    </button></li>
-                   <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-gray-100 hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
+                   <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-md-block bg-gray-100 hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
                      LOG IN
                    </button></li>
                   </ul>   
